--- a/content/resources/21g-213s04-th.md
+++ b/content/resources/21g-213s04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students talking. Image courtesy of Prof. Ellen Crocker.
-file: /media/courses/21g-213-high-intermediate-academic-communication-spring-2004/d94b67e35baf06005405a904370fabaf_21g-213s04-th.jpg
+file: /courses/21g-213-high-intermediate-academic-communication-spring-2004/d94b67e35baf06005405a904370fabaf_21g-213s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students talking. (Image courtesy of Prof. Ellen Crocker.)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 21g-213s04-th.jpg
 uid: d94b67e3-5baf-0600-5405-a904370fabaf
 ---
+Students talking. Image courtesy of Prof. Ellen Crocker.
+
