--- a/content/resources/21g-213s04.md
+++ b/content/resources/21g-213s04.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: Students talking. Image courtesy of Prof. Ellen Crocker.
-file: /media/courses/21g-213-high-intermediate-academic-communication-spring-2004/47a9a4f432a4e328b2af1d6804070e7b_21g-213s04.jpg
+file: /courses/21g-213-high-intermediate-academic-communication-spring-2004/47a9a4f432a4e328b2af1d6804070e7b_21g-213s04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Students talking. (Image courtesy of Prof. Ellen Crocker.)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: 21g-213s04.jpg
 uid: 47a9a4f4-32a4-e328-b2af-1d6804070e7b
 ---
+Students talking. Image courtesy of Prof. Ellen Crocker.
+
