Sync all content

--- a/content/resources/21g-213s04-th.md
+++ b/content/resources/21g-213s04-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: Image courtesy of Prof. Ellen Crocker.
   image-alt: Collage of four photos showing in-classroom discussion.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g-213s04-th.jpg
 uid: d94b67e3-5baf-0600-5405-a904370fabaf
 ---
 Students talking. Image courtesy of Prof. Ellen Crocker.
-
