--- a/content/resources/21g-213s04.md
+++ b/content/resources/21g-213s04.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: Image courtesy of Prof. Ellen Crocker.
   image-alt: Collage of four photos showing in-classroom discussion.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g-213s04.jpg
 uid: 47a9a4f4-32a4-e328-b2af-1d6804070e7b
 ---
 Students talking. Image courtesy of Prof. Ellen Crocker.
-
