--- a/content/resources/21g-213s04.md
+++ b/content/resources/21g-213s04.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Students talking. Image courtesy of Prof. Ellen Crocker.
 file: /courses/21g-213-high-intermediate-academic-communication-spring-2004/47a9a4f432a4e328b2af1d6804070e7b_21g-213s04.jpg
+file_size: 68118
 file_type: image/jpeg
 image_metadata:
   caption: Students talking. (Image courtesy of Prof. Ellen Crocker.)
